--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message Board</title>
-</head>
+<%- include('./partials/head', { title }) %>
 <body>
-    
+    <%- include('./partials/navbar') %>
+    <% messages.forEach(msg => { %>
+        <%- include('./partials/message', { msg }) %>
+    <% }) %>
 </body>
 </html>
