Added new message functionality

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,9 @@
-<header>
+<header class="flex-row">
     <div class="logo-div">
         <h1>Message Board</h1>
     </div>
+    <nav>
+        <a href="/" class="no-link">Home</a>
+        <a href="/new">New Message</a>
+    </nav>
 </header>
