--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,6 +4,6 @@
     </div>
     <nav>
         <a href="/" class="no-link">Home</a>
-        <a href="/new">New Message</a>
+        <a href="/new" class="no-link">New Message</a>
     </nav>
 </header>
