--- a/public/styles.css
+++ b/public/styles.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 html {
     box-sizing: border-box;
 }
 
 *, *::before, *::after {
+    padding: 0;
+    margin: 0;
     box-sizing: inherit;
 }
 
 body {
-    margin: 0;
     border: 0;
     font-family: 'Roboto';
 }
@@ -36,11 +39,31 @@ h1, h2, h3, h4, h5, h6 {
 .flex-row {
     display: flex;
     flex-direction: center;
-    justify-content: center;
     align-items: center;
     align-content: center;
 }
 
+section {
+    padding: 10px;
+}
+
+header {
+    padding: 10px;
+    justify-content: space-between;
+}
+
 nav {
     gap: 5px;
+}
+
+p {
+    margin: 10px 5px;
+}
+
+.msg-user {
+    font-size: 0.8rem;
+}
+
+.msg-date {
+    font-size: 0.6rem;
 }
